--- a/src/components/landing/DeepFeatures.astro
+++ b/src/components/landing/DeepFeatures.astro
@@ -97,7 +97,7 @@ const t = useTranslations(lang);
                         <Image
                             src={screenMedications}
                             alt={t("gallery.labels.medications")}
-                            class="w-full h-full object-cover"
+                            class="w-full h-full object-cover object-top"
                             width={300}
                         />
                     </DeviceMockup>
@@ -118,7 +118,7 @@ const t = useTranslations(lang);
                         <Image
                             src={screenCalendar}
                             alt={t("gallery.labels.calendarWeek")}
-                            class="w-full h-full object-cover"
+                            class="w-full h-full object-cover object-top"
                             width={300}
                         />
                     </DeviceMockup>
@@ -231,7 +231,7 @@ const t = useTranslations(lang);
                         <Image
                             src={screenSymptoms}
                             alt={t("gallery.labels.symptoms")}
-                            class="w-full h-full object-cover"
+                            class="w-full h-full object-cover object-top"
                             width={300}
                         />
                     </DeviceMockup>
