--- a/src/components/landing/Gallery.astro
+++ b/src/components/landing/Gallery.astro
@@ -157,7 +157,7 @@ const t = useTranslations(lang);
                             <Image
                                 src={screenDashboardDark}
                                 alt="Dark Mode Dashboard"
-                                class="w-full h-full object-cover"
+                                class="w-full h-full object-cover object-top"
                                 width={240}
                             />
                         </DeviceMockup>
@@ -171,7 +171,7 @@ const t = useTranslations(lang);
                             <Image
                                 src={screenDashboardLight}
                                 alt="Light Mode Dashboard"
-                                class="w-full h-full object-cover"
+                                class="w-full h-full object-cover object-top"
                                 width={280}
                             />
                         </DeviceMockup>
