--- a/src/pages/admin/index.astro
+++ b/src/pages/admin/index.astro
@@ -356,9 +356,9 @@ const baseUrl = import.meta.env.BASE_URL;
                         provider: "google",
                         options: {
                             redirectTo:
-                                window.location.origin +
-                                baseUrl +
-                                "/admin/callback",
+                                window.location.href
+                                    .split("?")[0]
+                                    .replace(/\/$/, "") + "/callback",
                             queryParams: {
                                 prompt: "consent select_account",
                             },
