--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -119,6 +119,10 @@ const jsonLd = {
 
 		<!-- Canonical and Hreflang -->
 		<link
+			rel="sitemap"
+			href={`${import.meta.env.BASE_URL}/sitemap-index.xml`}
+		/>
+		<link
 			rel="canonical"
 			href={`${siteUrl}${import.meta.env.BASE_URL}/${lang}/`}
 		/>
