chore(seo): add google site verification tag & waitlist ui updates

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -115,6 +115,10 @@ const jsonLd = {
 		/>
 
 		<meta name="generator" content={Astro.generator} />
+		<meta
+			name="google-site-verification"
+			content="b72boX-YTMPpT_1qmIYVjY3BpA7LIVuMVPtBqqJJBmk"
+		/>
 		<title>{title}</title>
 
 		<!-- Canonical and Hreflang -->
