--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -67,20 +67,47 @@ const baseUrl = import.meta.env.BASE_URL.replace(/\/$/, "");
                 >
             </div>
 
-            <div class="flex gap-3">
+            <div class="flex gap-4">
                 <a
                     href="https://www.threads.net/@lbernardo.dev"
                     target="_blank"
                     rel="noopener noreferrer"
-                    class="w-9 h-9 rounded-lg bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 hover:text-blue-500 transition-colors"
+                    class="w-10 h-10 rounded-xl bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 hover:text-gray-900 dark:hover:text-white transition-all hover:scale-110 shadow-sm"
+                    title="Threads"
                 >
-                    <Threads className="w-4 h-4" />
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="w-5 h-5 fill-current"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            d="M14.072 13.914c-.114.394-.282.748-.501 1.056-.219.308-.49.56-.811.751-.318.192-.68.288-1.077.288-.41 0-.776-.098-1.09-.292-.314-.194-.572-.46-.772-.793-.197-.331-.3-.728-.306-1.182v-1.192c.006-.45.109-.844.306-1.176.197-.331.455-.595.772-.787.318-.194.68-.291 1.09-.291.4 0 .762.097 1.076.291.314.194.582.457.798.789.215.334.33.728.342 1.176V13.914zm-.858-2.584c-.126-.265-.291-.482-.493-.646-.202-.164-.442-.246-.719-.246-.282 0-.523.085-.719.255-.196.17-.348.401-.453.689-.105.289-.161.637-.168 1.037v.444c.007.402.063.754.168 1.045.105.291.257.525.453.702.196.177.437.265.719.265.277 0 .517-.082.719-.246.202-.164.364-.381.484-.648.118-.266.182-.577.191-.933V12.27c-.009-.364-.073-.679-.191-.941zm7.046 5.378c.036.216.036.432.036.648 0 1.296-.341 2.376-1.008 3.24-.666.864-1.601 1.296-2.826 1.296-1.225 0-2.314-.378-3.239-1.116-.925-.738-1.611-1.782-2.034-3.132-.504.144-.928.216-1.296.216-.864 0-1.548-.216-2.052-.648-.504-.432-.756-1.044-.756-1.836V12.18c0-.792.252-1.404.756-1.836.504-.432 1.188-.648 2.052-.648.368 0 .792.072 1.296.216.423-1.35 1.109-2.394 2.034-3.132.925-.738 2.014-1.116 3.239-1.116 1.242 0 2.214.432 2.916 1.296s1.044 1.944 1.044 3.24c0 .216-.012.432-.036.648h1.224c-.45-3.096-1.584-5.364-3.411-6.702C17.06.846 14.88.18 12.18.18c-2.412 0-4.644.594-6.696 1.782C3.432 3.15 1.836 4.752.684 6.75 0 8.046-.108 9.504-.108 11.232v1.512c0 1.728.108 3.186.792 4.482 1.152 1.998 2.748 3.6 4.8 4.788 2.052 1.188 4.284 1.782 6.696 1.782 2.7 0 4.878-.666 6.534-1.998 1.827-1.338 2.961-3.606 3.411-6.702z"
+                        ></path>
+                    </svg>
+                </a>
+                <a
+                    href="https://www.instagram.com/lbernardo.dev"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    class="w-10 h-10 rounded-xl bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 hover:text-pink-500 transition-all hover:scale-110 shadow-sm"
+                    title="Instagram"
+                >
+                    <svg
+                        viewBox="0 0 24 24"
+                        class="w-5 h-5 fill-current"
+                        xmlns="http://www.w3.org/2000/svg"
+                    >
+                        <path
+                            d="M12 2.163c3.204 0 3.584.012 4.85.07 3.252.148 4.771 1.691 4.919 4.919.058 1.265.069 1.645.069 4.849 0 3.205-.012 3.584-.069 4.849-.149 3.225-1.664 4.771-4.919 4.919-1.266.058-1.644.07-4.85.07-3.204 0-3.584-.012-4.849-.07-3.26-.149-4.771-1.699-4.919-4.92-.058-1.265-.07-1.644-.07-4.849 0-3.204.013-3.583.07-4.849.149-3.227 1.664-4.771 4.919-4.919 1.266-.057 1.645-.069 4.849-.069zm0-2.163c-3.259 0-3.667.014-4.947.072-4.358.2-6.78 2.618-6.98 6.98-.059 1.281-.073 1.689-.073 4.948 0 3.259.014 3.668.072 4.948.2 4.358 2.618 6.78 6.98 6.98 1.281.058 1.689.072 4.948.072 3.259 0 3.668-.014 4.948-.072 4.354-.2 6.782-2.618 6.979-6.98.059-1.28.073-1.689.073-4.948 0-3.259-.014-3.667-.072-4.947-.196-4.354-2.617-6.78-6.979-6.98-1.281-.059-1.69-.073-4.949-.073zm0 5.838c-3.403 0-6.162 2.759-6.162 6.162s2.759 6.163 6.162 6.163 6.162-2.759 6.162-6.163c0-3.403-2.759-6.162-6.162-6.162zm0 10.162c-2.209 0-4-1.791-4-4 0-2.209 1.791-4 4-4s4 1.791 4 4c0 2.209-1.791 4-4 4zm6.406-11.845c-.796 0-1.441.645-1.441 1.44s.645 1.44 1.441 1.44c.795 0 1.439-.645 1.439-1.44s-.644-1.44-1.439-1.44z"
+                        ></path>
+                    </svg>
                 </a>
                 <a
                     href="mailto:vitalspath@gmail.com"
-                    class="w-9 h-9 rounded-lg bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 hover:text-blue-500 transition-colors"
+                    class="w-10 h-10 rounded-xl bg-gray-100 dark:bg-gray-800 flex items-center justify-center text-gray-400 hover:text-blue-500 transition-all hover:scale-110 shadow-sm"
+                    title="Email"
                 >
-                    <Mail className="w-4 h-4" />
+                    <Mail className="w-5 h-5" />
                 </a>
             </div>
         </div>
